--- a/index.html
+++ b/index.html
@@ -173,49 +173,49 @@
             <ul class="catalog-category-list">
                 <li class="catalog-category-item">
                     <a class="catalog-category-link" href="">
-                        <h3>Виртуальная реальность</h3>
+                        <h3 class="catalog-category-heading">Виртуальная реальность</h3>
                         <p>
-                            <img class="popular" src="img/popular-1.svg" width="97" height="55" alt="Раздел «Виртуальная реальность»">
+                            <img class="popular" src="img/popular_1.svg" width="97" height="55" alt="Раздел «Виртуальная реальность»">
                         </p>
                     </a>
                 </li>
                 <li class="catalog-category-item">
                     <a class="catalog-category-link" href="">
-                        <h3>Моноподы<br> для селфи</h3>
+                        <h3 class="catalog-category-heading">Моноподы<br> для селфи</h3>
                         <p>
-                            <img class="popular" src="img/popular-2.svg" width="86" height="117" alt="Раздел «Моноподы для селфи»">
+                            <img class="popular" src="img/popular_2.svg" width="86" height="117" alt="Раздел «Моноподы для селфи»">
                         </p>
                     </a>
                 </li>
                 <li class="catalog-category-item">
                     <a class="catalog-category-link" href="">
-                        <h3>Экшн-камеры</h3>
+                        <h3 class="catalog-category-heading">Экшн-камеры</h3>
                         <p>
-                            <img class="popular" src="img/popular-3.svg" width="71" height="87" alt="Раздел «Экшн-камеры»">
+                            <img class="popular" src="img/popular_3.svg" width="71" height="87" alt="Раздел «Экшн-камеры»">
                         </p>
                     </a>
                 </li>
                 <li class="catalog-category-item">
                     <a class="catalog-category-link" href="">
-                        <h3 class="short-name">Фитнес-браслеты</h3>
+                        <h3 class="catalog-category-heading short-name">Фитнес-браслеты</h3>
                         <p>
-                            <img class="popular" src="img/popular-4.svg" width="107" height="65" alt="Раздел «Фитнес-браслеты»">
+                            <img class="popular" src="img/popular_4.svg" width="107" height="65" alt="Раздел «Фитнес-браслеты»">
                         </p>
                     </a>
                 </li>
                 <li class="catalog-category-item">
                     <a class="catalog-category-link" href="">
-                        <h3>Умные часы</h3>
+                        <h3 class="catalog-category-heading">Умные часы</h3>
                         <p>
-                            <img class="popular" src="img/popular-5.svg" width="56" height="98" alt="Раздел «Умные часы»">
+                            <img class="popular" src="img/popular_5.svg" width="56" height="98" alt="Раздел «Умные часы»">
                         </p>
                     </a>
                 </li>
                 <li class="catalog-category-item">
                     <a class="catalog-category-link" href="">
-                        <h3>Квадрокоптеры</h3>
+                        <h3 class="catalog-category-heading">Квадрокоптеры</h3>
                         <p>
-                            <img class="popular" src="img/popular-6.svg" width="132" height="69" alt="">
+                            <img class="popular" src="img/popular_6.svg" width="132" height="69" alt="">
                         </p>
                     </a>
                 </li>
@@ -237,21 +237,18 @@
                         <p>Мы с удовольствием доставим ваш товар прямо к вашему</p>
                         <p>подъезду совершенно бесплатно! Ведь мы неплохо</p>
                         <p>заработаем, поднимая его на ваш этаж.</p>
-                        </p>
                     </li>
                     <li class="services-description-item services-description-item-2">
                         <h3>Гарантия</h3>
                         <p>Если из-за возгорания купленного у нас товара у вас сгорит дом —</p>
                         <p>не переживайте, мы выдадим вам новый.</p>
                         <p>Товар, не дом, конечно же.</p>
-                        </p>
                     </li>
                     <li class="services-description-item services-description-item-3">
                         <h3>Кредит</h3>
                         <p>Залезть в долговую яму стало проще! Кредитные консультанты</p>
                         <p>подберут для вас наиболее выгодные</p>
                         <p>условия кредита. Выгодные для нашего банка, разумеется.</p>
-                        </p>
                     </li>
                 </ul>
             </div>
@@ -261,22 +258,22 @@
             <ul class="partnership-list">
                 <li class="partners-item partners-item-1">
                     <a href="">
-                        <img src="img/logo-1.png" width="260" height="100" alt="Логотип компании «DJI», производителя мультикоптеров, микроконтроллеров, видеооборудования">
+                        <img src="img/logo_1.png" width="260" height="100" alt="Логотип компании «DJI», производителя мультикоптеров, микроконтроллеров, видеооборудования">
                     </a>
                 </li>
                 <li class="partners-item partners-item-2">
                     <a href="">
-                        <img src="img/logo-2.png" width="260" height="100" alt="Логотип компании «SP GADGETS», производителя качественных аксессуаров для экшн-камер GoPro">
+                        <img src="img/logo_2.png" width="260" height="100" alt="Логотип компании «SP GADGETS», производителя качественных аксессуаров для экшн-камер GoPro">
                     </a>
                 </li>
                 <li class="partners-item partners-item-3">
                     <a href="">
-                        <img src="img/logo-3.png" width="260" height="100" alt="Логотип компании «GoPro», производителя экшн-камер GoPro и аксессуаров к ним">
+                        <img src="img/logo_3.png" width="260" height="100" alt="Логотип компании «GoPro», производителя экшн-камер GoPro и аксессуаров к ним">
                     </a>
                 </li>
                 <li class="partners-item partners-item-4">
                     <a href="">
-                        <img src="img/logo-4.png" width="260" height="100" alt="Логотип компании «VIVE», производителя систем виртуальной реальности">
+                        <img src="img/logo_4.png" width="260" height="100" alt="Логотип компании «VIVE», производителя систем виртуальной реальности">
                     </a>
                 </li>
             </ul>
@@ -303,7 +300,7 @@
                 <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете</p>
                 <p>проверить работоспособность покупки. Всякое бывает.</p>
                 <a href="https://yandex.ru/maps/213/moscow/house/ulitsa_stroiteley_15/Z04YcwVpT0ADQFtvfXp5d3VrZA==/?ll=37.529655%2C55.686980&z=16.65">
-                    <img class="map" src="img/map-1.png" width="560" height="222" alt="Схема проезда">
+                    <img class="map" src="img/map.png" width="560" height="222" alt="Схема проезда">
                 </a>
                 <p class="contacts">
                     <a class="button about-company-button" href="">Напишите нам</a>
@@ -392,7 +389,7 @@
                 </div>
                 <div class="html-logo">
                     <a class="footer-copyright" href="https://htmlacademy.ru/intensive/htmlcss">
-                        <img src="img/logo-html.svg" width="27" height="34" alt="Перейти на страницу интенсива «HTML и CSS. Профессиональная вёрстка сайтов»">
+                        <img src="img/logo_html.svg" width="27" height="34" alt="Перейти на страницу интенсива «HTML и CSS. Профессиональная вёрстка сайтов»">
                     </a>
                 </div>
             </div>
