--- a/catalog.html
+++ b/catalog.html
@@ -113,10 +113,10 @@
                                 <div class="range-filter">
                                     <div class="range-controls">
                                         <div class="scale">
-                                            <div class="bar" style="width: 60%; margin-left: 0%"></div>
+                                            <div class="bar"></div>
                                         </div>
-                                        <div class="toggle toggle-min" tabindex="0" style="left: 0%"></div>
-                                        <div class="toggle toggle-max" tabindex="0" style="left: 57%"></div>
+                                        <div class="toggle toggle-min" tabindex="0"></div>
+                                        <div class="toggle toggle-max" tabindex="0"></div>
                                     </div>
                                     <div class="price-controls">
                                         <label class="min-price">
@@ -200,7 +200,7 @@
                                         <a href="">Любительская селфи-палка</a>
                                         <span class="price">1 100 руб.</span>
                                     </div>
-                                    <img src="img/item-1-1.jpg" width="360" height="380" alt="Любительская селфи-палка. Внешний вид.">
+                                    <img src="img/item_1.jpg" width="360" height="380" alt="Любительская селфи-палка. Внешний вид.">
                                 </div>
                                 <div class="layer-2">
                                     <button type="button" class="button add-to-cart">В корзину</button>
@@ -213,7 +213,7 @@
                                         <a href="">Профессиональная<br> селфи-палка</a>
                                         <span class="price">1 500 руб.</span>
                                     </div>
-                                    <img src="img/item-2-1.jpg" width="360" height="380" alt="Профессиональная селфи-палка. Внешний вид.">
+                                    <img src="img/item_2.jpg" width="360" height="380" alt="Профессиональная селфи-палка. Внешний вид.">
                                 </div>
                                 <div class="layer-2">
                                     <button type="button" class="button add-to-cart">В корзину</button>
@@ -226,7 +226,7 @@
                                         <a href="">Непотопляемая<br> селфи-палка</a>
                                         <span class="price">1 500 руб.</span>
                                     </div>
-                                    <img src="img/item-3-1.jpg" width="360" height="380" alt="Непотопляемая селфи-палка. Внешний вид.">
+                                    <img src="img/item_3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка. Внешний вид.">
                                 </div>
                                 <div class="layer-2">
                                     <button type="button" class="button add-to-cart">В корзину</button>
@@ -239,7 +239,7 @@
                                         <a href="">Селфи-палка «Следуй за<br> мной»</a>
                                         <span class="price">1 900 руб.</span>
                                     </div>
-                                    <img src="img/item-4-1.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной». Внешний вид.">
+                                    <img src="img/item_4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной». Внешний вид.">
                                 </div>
                                 <div class="layer-2">
                                     <button type="button" class="button add-to-cart">В корзину</button>
@@ -361,7 +361,7 @@
                 </div>
                 <div class="html-logo">
                     <a class="footer-copyright" href="https://htmlacademy.ru/intensive/htmlcss">
-                        <img src="img/logo-html.svg" width="27" height="34" alt="Перейти на страницу интенсива «HTML и CSS. Профессиональная вёрстка сайтов»">
+                        <img src="img/logo_html.svg" width="27" height="34" alt="Перейти на страницу интенсива «HTML и CSS. Профессиональная вёрстка сайтов»">
                     </a>
                 </div>
             </div>
