--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                     <a class="catalog-category-link" href="">
                         <h3 class="catalog-category-heading">Квадрокоптеры</h3>
                         <p>
-                            <img class="popular" src="img/popular_6.svg" width="132" height="69" alt="">
+                            <img class="popular" src="img/popular_6.svg" width="132" height="69" alt="Раздел «Квадрокоптеры»">
                         </p>
                     </a>
                 </li>
